general/internal-user/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: denyexternalusers
spec:
  crd:
    spec:
      names:
        kind: DenyExternalUsers
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          properties:
            labels:
              type: array
              items: 
                type: string
            employeeDomains:
              type: array
              items: 
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package denyexternalusers

        violation[{"msg": msg}] {
          obj := input.review.object
          obj.kind == "RoleBinding"
          email := obj.subjects[0].name
          not isEmployee(email)
          ns := obj.metadata.namespace
          profile := data.inventory.cluster["kubeflow.org/v1"]["Profile"][ns]
          profileLabel := input.parameters.labels[_]
          profile.metadata.labels[profileLabel] == "true"
          msg := sprintf("Profile %v has %v=%v", [ns, profileLabel, profile.metadata.labels[profileLabel]])
        }

        violation[{"msg": msg}] {
          obj := input.review.object
          obj.kind == "AuthorizationPolicy"
          email := obj.spec.rules[0]["when"][0]["values"][0]
          not isEmployee(email)
          ns := obj.metadata.namespace
          profile := data.inventory.cluster["kubeflow.org/v1"]["Profile"][ns]
          profileLabel := input.parameters.labels[_]
          profile.metadata.labels[profileLabel] == "true"
          msg := sprintf("Profile %v has %v=%v", [ns, profileLabel, profile.metadata.labels[profileLabel]])
        }
        
        # Ensure only non-internal employees are checked
        isEmployee(email) {
          endswith(email, concat("@", [input.parameters.employeeDomains[_]]))
        }
